# dataset-generation

./: .gitignore  pyproject.toml  test.ipynb
data/: intents.json
scripts/: qwen_sft.yaml
src/data_generation/: pipeline.py
src/evaluation/: evaluate_model.py
